add sf controller
